IaC/security_groups.tf
resource "aws_security_group" "sg_publica" {
  name        = "sg_publica"
  description = "Permite acesso SSH de qualquer IP"
  vpc_id      = aws_vpc.vpc_beira_mar.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_privada" {
  name        = "sg_privada"
  description = "Permite acesso SSH apenas da mesma VPC"
  vpc_id      = aws_vpc.vpc_beira_mar.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.vpc_beira_mar.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
